Fixed z-index for drop downs

--- a/src/dashboardjs/scss/rules.scss
+++ b/src/dashboardjs/scss/rules.scss
@@ -199,7 +199,7 @@
 		border-radius: 10px;
 		margin-left: 40px;
 		box-shadow: 0px 0px 12px rgba(0,0,0,0.1);
-		z-index:2;
+		z-index:3;
 	}
 
 	.sorting-component .dropdown.open .dropdown-menu {
